Closed Bug 1764280 Opened 3 years ago Closed 2 years ago

Eager delazification fails on asm.js content.

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: nbp, Assigned: nbp)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Delazification task is currently scheduling Asm.js functions to be delazified.
We should filter out these function and not schedule these.

Asm.js content is produced while generating the content of the enclosing script.
By filtering function which are already emitted, we filter out Asm.js functions
from the delazification tasks.

Pushed by npierron@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/51b6c13941b6
Filter out Asm.js by not visiting script which are already generated. r=arai

Backed out for causing build bustages on ScriptLoader.cpp.

Failure line: /builds/worker/checkouts/gecko/dom/script/ScriptLoader.cpp:1691:14: error: enumeration value 'CheckConcurrentWithOnDemand' not handled in switch [-Werror=switch]

Push with failures
Failure log 1
Failure log 2
Backout link

Flags: needinfo?(nicolas.b.pierron)
Pushed by npierron@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7f09bb767925
Filter out Asm.js by not visiting script which are already generated. r=arai
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Regressions: 1770096
Regressions: 1770165
Flags: needinfo?(nicolas.b.pierron)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: