Bug 1764280 - Filter out Asm.js by not visiting script which are already generated. r=arai

Asm.js content is produced while generating the content of the enclosing script.
By filtering function which are already emitted, we filter out Asm.js functions
from the delazification tasks.

Differential Revision: https://phabricator.services.mozilla.com/D143465